Fixed navigation at smaller viewports
- Added a margin top to navigation drop down to stop it overlapping with navigation hamburger button and logo

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,10 @@ nav  {
   margin: auto;
 }
 
+.navbar-nav {
+  margin-top: 1px
+}
+
 .custom-toggler.navbar-toggler {
    border-color: #f7f7f7;
 }
